# lacli

./: .gitignore  BENCHMARK.md  LICENSE  README.md  TEST.md  TODO.md  main.py  pyproject.toml
benches/: run.sh
benches/load_bench/: 314.py  314t.py
benches/utils/: generate_csv.sh  timer.py
src/la_cli/: main.py
src/la_cli/benchmark/: bench.py  timer.py
src/la_cli/core/: __init__.py
src/lacli/: arg.py  main.py  writer.py
src/lacli/benchmark/: bench.py  const.py  timer.py
src/lacli/core/: __init__.py  bmo.py  checks.py  factorization.py  file.py  least_squares.py  reconstruction.py  rotation.py
src/lacli/download/: __init__.py  chunk.py  file.py  merge.py  recon.py
src/lacli/load/: __init__.py  file.py  recon.py
src/lacli/loader/: file.py  lex.py  merge.py
src/lacli/models/: __init__.py  lexer.py  matrix.py
src/lacli/upload/: file.py  recon.py
src/lacli/utils/: file.py
src/lacon/: arg.py  main.py
src/lacon/benchmark/: bench.py  timer.py
src/lacon/core/: __init__.py
src/linacon/: arg.py  main.py
src/linacon/benchmark/: bench.py  timer.py
src/linacon/core/: __init__.py  bmo.py  checks.py
src/linacon/models/: __init__.py  exce.py
tests/: conftest.py  test_core.py  test_download.py  test_load.py  test_upload.py
tests/datasets/: 10_10_float.csv  10_5_float.csv  16_4_float.csv  20_4_float.csv  3_8_float.csv  5_10_float.csv  5_5_float.csv
tests/utils/: generate_csv.sh  generate_csvs.sh  timer.py
