[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lacli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "pyarrow>=24.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lacli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "0.1"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "slow: slow tests",
    "integration: need external services",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
