[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linacon"
version = "0.1.2"
description = "linear algebra in your console"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "pyarrow>=24.0.0",
]
license = { text = "MIT" }
authors = [
    { name = "cecinuga", email = "matteo.marchetti.info@gmail.com" }
]

[project.scripts]
linacon = "linacon.main:main"

[project.urls]
Homepage="https://github.com/cecinuga/lacli"
Issues="https://github.com/cecinuga/lacli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/linacon"]

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "0.1"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "slow: slow tests",
    "integration: need external services",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
